--- a/src/sass/track.scss
+++ b/src/sass/track.scss
@@ -1,20 +1,19 @@
-$blue : #59b6fc;
-$bgclr : #e7e8ec;
-
-@mixin modal_size($width:800px,$height:600px){
-        position: absolute;
-        margin: 0;
-        top: 50%;
-        left: 50%;
-        width: $width;
-        margin-left: -$width/2;
-        height: $height;
-        margin-top: -$height/2;
-        border-radius: 8px;
-        overflow: hidden;
+$blue: #59b6fc;
+$bgclr: #e7e8ec;
+@mixin modal_size($width:800px, $height:600px) {
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    width: $width;
+    margin-left: -$width/2;
+    height: $height;
+    margin-top: -$height/2;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
-.big_modal .modal-dialog{
+.big_modal .modal-dialog {
     //@include modal_size();
     /*position: absolute;
     margin: 0;
@@ -26,27 +25,27 @@ $bgclr : #e7e8ec;
     margin-top: -320px;
     border-radius: 8px;
     overflow: hidden;*/
-    .modal-content{
+    .modal-content {
         .modal-header {
             background: #344052;
             color: #fff;
             height: 40px;
             padding: 0;
-            h3{
+            h3 {
                 line-height: 40px;
                 font-size: 16px;
                 text-align: center;
                 margin: 0;
             }
-            button.close{
+            button.close {
                 right: 0;
                 position: absolute;
                 height: 40px;
                 width: 40px;
-                outline : none;
+                outline: none;
                 opacity: .9;
-                text-shadow:none;
-                span{
+                text-shadow: none;
+                span {
                     color: white;
                 }
             }
@@ -55,11 +54,11 @@ $bgclr : #e7e8ec;
             position: relative;
             padding: 15px;
             height: 510px;
-            overflow:scroll;
-            overflow-x:hidden;
-            overflow-y:auto;
+            overflow: scroll;
+            overflow-x: hidden;
+            overflow-y: auto;
             background: $bgclr;
-            .sub_wrapper{
+            .sub_wrapper {
                 color: #666;
                 padding: 15px;
                 border-radius: 4px;
@@ -79,10 +78,10 @@ $bgclr : #e7e8ec;
                 margin-top: 7px;
                 font-size: 16px;
                 margin: 6px 22px 0 22px;
-                &.modal_close{
+                &.modal_close {
                     background-color: #e6e6e6;
                 }
-                &.modal_active{
+                &.modal_active {
                     background-color: $blue;
                 }
             }
@@ -90,69 +89,99 @@ $bgclr : #e7e8ec;
     }
 }
 
+
 /* 轨迹详情正文样式 */
-#gf_detail{
-    .modal-dialog{
+
+#gf_detail {
+    .modal-dialog {
         width: 800px;
         //@include modal_size(540px); /* 自定义模态框宽度 */
     }
-    .title{
+    .title {
         padding: 0 15px;
         line-height: 54px;
-        .date{
+        .date {
             float: right;
         }
     }
-    table{
+    table {
         margin-bottom: 10px;
         width: 100%;
-        tr.height{
+        tr.height {
             height: 80px;
         }
-        td{
+        td {
             padding: 10px;
             border: 1px solid #dcdcdc;
-            &.bg{
+            &.bg {
                 background: #f7f7f7;
             }
-            &.key{
+            &.key {
                 width: 122px;
                 text-align: center;
             }
-            &.key02{
+            &.key02 {
                 width: 118px;
             }
-            &.newkey{
+            &.newkey {
                 width: 60px;
             }
-            &.value{
+            &.value {
                 width: 248px;
             }
-            &.center{
+            &.center {
                 text-align: center;
             }
         }
-        &.middle{
-            .noPadding{
-                padding: 4px;;
+        &.middle {
+            .noPadding {
+                padding: 4px;
+                ;
             }
-            td{
+            td {
                 padding: 18px 10px;
             }
         }
-        &:last-child{
+        &:last-child {
             margin-bottom: 0;
         }
     }
 }
 
+
 /* 人员列表正文样式 */
-#gf_people{
-    .modal-dialog{
+
+#gf_people {
+    .modal-dialog {
         width: 400px;
         //@include modal_size(540px); /* 自定义模态框宽度 */
     }
 }
 
 
+/* 表格小图标样式 */
 
+a.see {
+    i {
+        display: inline-block;
+        width: 22px;
+        height: 16px;
+        background: url(/src/images/event/look.png) no-repeat;
+        vertical-align: middle;
+        &:hover{
+            background: url(/src/images/event/look_h.png) no-repeat;
+        }
+    }
+}
+a.out {
+    i {
+        display: inline-block;
+        width: 22px;
+        height: 17px;
+        background: url(/src/images/event/out.png) no-repeat;
+        vertical-align: middle;
+        &:hover{
+            background: url(/src/images/event/out_h.png) no-repeat;
+        }
+    }
+}
