--- a/src/sass/dispose_common.scss
+++ b/src/sass/dispose_common.scss
@@ -5,7 +5,6 @@
     // margin-left: -400px;
     // height: 600px;
     // margin-top: -300px;
-    border-radius: 8px;
     font-size: 14px;
     // overflow: hidden;
     .modal-lg {
@@ -15,6 +14,8 @@
             width: 800px;
             height: 600px;
             margin: 0 auto;
+            border-radius: 8px;
+            overflow: hidden;
             .modal-header {
                 height: 40px;
                 background: #344052;
