--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -172,9 +172,9 @@ html {
         font-size: 14px;
         color: #666;
         position: absolute;
-        left: 50%;
+        // left: 50%;
         bottom: 20px;
-        transform: translateX(-50%);
+        // transform: translateX(-50%);
         span {
             vertical-align: middle;
             font-size: 26px;
