--- a/src/sass/help.scss
+++ b/src/sass/help.scss
@@ -28,6 +28,13 @@
                 text-align: center;
                 color: #fff;
                 position: relative;
+                #close {
+                    display: in-block;
+                    float: right;
+                    margin-right: 5px;
+                    margin-top: -5px;
+                    cursor: pointer
+                }
             }
             .zixun {
                 position: absolute;
