--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -43,6 +43,12 @@ html {
             top: 50%;
             margin-top: -240px;
             display: inline-block;
+            #versionInformation {
+                padding-right: 20px;
+                padding-top: 20px;
+                font-size: 16px;
+                text-align: right;
+            }
             .message {
                 margin: 0 auto;
                 width: 310px;
@@ -179,6 +185,82 @@ html {
             font-size: 26px;
             margin-left: 5px;
             margin-right: 5px
+        }
+    }
+}
+
+#versionmodal {
+    .modal-lg {
+        .modal-content {
+            width: 500px;
+            margin: 200px auto;
+            border-radius: 8px;
+            overflow: hidden;
+            .modal-header {
+                height: 40px;
+                background: #344052;
+                color: #fff;
+                padding: 0;
+                margin: 0;
+                h3 {
+                    line-height: 40px;
+                    font-size: 16px;
+                    text-align: center;
+                    margin: 0;
+                    a {
+                        color: #E7E8EC;
+                        margin-top: 6px;
+                        margin-right: 10px;
+                        font-weight: none;
+                        opacity: 1;
+                    }
+                }
+            }
+            .modal-body {
+                position: relative;
+                padding: 15px;
+                min-height: 200px;
+                overflow-x: hidden;
+                overflow-y: auto;
+                background: #E7E8EC;
+                .content {
+                    width: 100%;
+                    height: 220px;
+                    border-radius: 8px;
+                    background: #fff;
+                    h4 {
+                        height: 50px;
+                        line-height: 50px;
+                        padding-left: 20px;
+                        margin: 0;
+                    }
+                    ul {
+                        border-top: 1px solid #e4e4e4;
+                        padding-top: 10px;
+                        padding-left: 40px;
+                        li {
+                            line-height: 30px;
+                        }
+                    }
+                }
+            }
+            .modal-footer {
+                text-align: center;
+                background: #344052;
+                height: 50px;
+                padding: 0;
+                margin: 0;
+                button {
+                    height: 36px;
+                    border: none;
+                    width: 120px;
+                    margin-top: 7px;
+                    font-size: 16px;
+                    background: #E7E8EC;
+                    border-radius: 8px;
+                    margin: 7px 20px 0 20px;
+                }
+            }
         }
     }
 }
