--- a/src/sass/personal.scss
+++ b/src/sass/personal.scss
@@ -62,6 +62,11 @@
         color: #666;
         height: 36px;
         line-height: 36px;
+        .modifyPhoneBtn {
+            float: right;
+            cursor: pointer;
+            color: #59b6fc;
+        }
     }
     
     .note {
