添加动画 Signed-off-by: gaofeng <gaofeng3695@126.com>

--- a/src/sass/pipeline_map/index.scss
+++ b/src/sass/pipeline_map/index.scss
@@ -61,3 +61,11 @@ body,
         }
     }
 }
+
+
+.slide-enter-active, .slide-leave-active {
+    transition: all .5s
+}
+.slide-enter, .slide-leave-to /* .fade-leave-active in below version 2.1.8 */ {
+    margin-left: -300px;
+}
